auth/register and auth/login added
