# routes/users.js
@@ -163,6 +163,7 @@ router.patch('/:id', [auth, validateObjectId], async (req, res) => {
         avatar: req.body.avatar,
         location: req.body.location,
         lastOnline: Date.now(),
+        userType: req.body.userType,
       },
     },
     { new: true }
