# swagger.json
@@ -415,18 +415,100 @@
         "responses": {
           "200": {
             "headers": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "x-auth-token": {
-                    "type": "string"
-                  }
-                }
+              "x-auth-token": {
+                "type": "string"
               }
             },
             "description": "successful operation",
             "schema": {
               "$ref": "#/definitions/User"
+            }
+          }
+        }
+      }
+    },
+    "/auth/register": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Register new user",
+        "description": "Yeni bir user kayıt edilir.",
+        "operationId": "registerUser",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Register user info",
+            "description": "Kayıt edilecek kullanıcı bilgileri",
+            "schema": {
+              "type": "object",
+              "required": ["name", "email", "password"],
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                },
+                "password": {
+                  "type": "string"
+                },
+                "age": {
+                  "type": "integer"
+                },
+                "avatar": {
+                  "$ref": "#/definitions/Avatar"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "headers": {
+              "x-auth-token": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Login existing user",
+        "description": "Var olan kullanıcı kayıt olur.",
+        "operationId": "loginUser",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Login user info",
+            "description": "Login olacak kullanıcı email ve password",
+            "schema": {
+              "type": "object",
+              "required": ["email", "password"],
+              "properties": {
+                "email": {
+                  "type": "string"
+                },
+                "password": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "headers": {
+              "x-auth-token": {
+                "type": "string"
+              }
             }
           }
         }
@@ -465,16 +547,8 @@
         "responses": {
           "200": {
             "description": "successful operation",
-            "headers": {
-              "x-auth-token": {
-                "type": "string"
-              }
-            },
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Cardend"
-              }
+              "$ref": "#/definitions/Cardend"
             }
           }
         },
@@ -515,11 +589,6 @@
         "responses": {
           "200": {
             "description": "successful operation",
-            "headers": {
-              "x-auth-token": {
-                "type": "string"
-              }
-            },
             "schema": {
               "$ref": "#/definitions/Challengeend"
             }
@@ -629,6 +698,9 @@
               "questionVId": {
                 "type": "string"
               },
+              "questionType": {
+                "type": "string"
+              },
               "question": {
                 "type": "string"
               },
@@ -682,6 +754,9 @@
         "semanticAnswer": {
           "type": "string"
         },
+        "questionType": {
+          "type": "string"
+        },
         "gameTypes": {
           "type": "array",
           "items": {
@@ -732,8 +807,8 @@
         "isAdmin": {
           "type": "boolean"
         },
-        "isGold": {
-          "type": "boolean"
+        "userType": {
+          "type": "string"
         },
         "level": {
           "type": "number"
